Use locale specific numbers formatting Refactor dbc impl package